--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.14.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.29.4",
+    "prettier": "2.6.2",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
